--- a/container.html
+++ b/container.html
@@ -26,13 +26,13 @@
     </style>
   </head>
   <body>
-    <div class="container bg-primary mt-5 rounded">
+    <div class="container bg-primary text-white mt-5 rounded">
       <h1>My Hobbies</h1>
       <p>Exploring the things I love to do in my free time!</p>
       <p>Hobbies keep me active, creative, and happy.(Cap)</p>
     </div>
 
-    <div class="container-fluid bg-success mt-5" id="box">
+    <div class="container-fluid bg-success text-white mt-5" id="box">
       <h1>Cycling</h1>
       <p>
         I love cycling because it keeps me fit and lets me explore new places.
@@ -41,7 +41,7 @@
     </div>
 
     <div
-      class="container bg-dark text-warning mt-5 border border-light rounded p-4"
+      class="container bg-dark text-warning mt-5 border border-light rounded"
     >
       <h1>Gaming</h1>
       <p>
